testsuite/tests/parser/should_fail/T21843b.hs
module UnicodeSmartQuotes where

badChar = ‘x’
